--- a/opdracht/website/index.html
+++ b/opdracht/website/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zet hier je naam</title>
+    <title>nassim</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -14,15 +14,15 @@
         <h1 id="titel">Top 3 best films ooit</h1>
         <div class="poster" id="poster1">
             <h1>Voorbeeld titel</h1>
-            <img src="img/voorbeeldposter.jpg" alt="" class="posterimg" id="posterimg1">
+            <img src="img/shang.jfif" alt="" class="posterimg" id="posterimg1">
         </div>
         <div class="poster" id="poster2">
             <h1>Voorbeeld titel</h1>
-            <img src="img/voorbeeldposter.jpg" alt="" class="posterimg" id="posterimg1">  
+            <img src="img/spiderman.jpg" alt="" class="posterimg" id="posterimg1">  
         </div>
         <div class="poster" id="poster3">
             <h1>Voorbeeld titel</h1>
-            <img src="img/voorbeeldposter.jpg" alt="" class="posterimg" id="posterimg1">
+            <img src="img/mugen.jpg" alt="" class="posterimg" id="posterimg1">
         </div>
     </main>
     <footer>
