--- a/opdracht/website/index.html
+++ b/opdracht/website/index.html
@@ -13,15 +13,15 @@
     <main>
         <h1 id="titel">Top 3 best films ooit</h1>
         <div class="poster" id="poster1">
-            <h1>Voorbeeld titel</h1>
+            <h1>shang chi</h1>
             <img src="img/shang.jfif" alt="" class="posterimg" id="posterimg1">
         </div>
         <div class="poster" id="poster2">
-            <h1>Voorbeeld titel</h1>
+            <h1>spiderman</h1>
             <img src="img/spiderman.jpg" alt="" class="posterimg" id="posterimg1">  
         </div>
         <div class="poster" id="poster3">
-            <h1>Voorbeeld titel</h1>
+            <h1>demon slayer mugen train</h1>
             <img src="img/mugen.jpg" alt="" class="posterimg" id="posterimg1">
         </div>
     </main>
