--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
-<h1>Dit is een heading</h1>
-<p>dit is een paragraaf</p>
- <img src=
+<!DOCTYPE html>
+<html lang="en">
+<head> 
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>nassim</title>
+    <link rel="stylesheet" href="css/index/styles.css"
+</head>
+<body>
+<h1>mijn vakantie</h1>
+<p1>anime genaamd jojos bizzare adventure</p1>
+<img class="mijnafbeelding"src="https://i.pinimg.com/originals/5d/dc/be/5ddcbe0aeda1da026029abc2bfd14468.jpg">
+<button onclick="alert('niet weg gaan'); ">klik hier</button>"
+</body>
+</html>
