--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h1>mijn vakantie</h1>
-<p1>anime genaamd jojos bizzare adventure</p1>
+<p1>anime genaamd jojos bizare adventure</p1>
 <img class="mijnafbeelding"src="https://i.pinimg.com/originals/5d/dc/be/5ddcbe0aeda1da026029abc2bfd14468.jpg">
 <button onclick="alert('niet weg gaan'); ">klik hier</button>"
 </body>
